--- a/appinfo.json
+++ b/appinfo.json
@@ -4,8 +4,9 @@
   "vendor": "My Company",
   "type": "web",
   "main": "index.html",
-  "title": "new app",
+  "title": "cysh app",
   "icon": "icon.png",
+  "uiRevision": 2,
   "requiredPermissions": [
     "time.query",
     "activity.operation"
